--- a/config/.tmux.conf
+++ b/config/.tmux.conf
@@ -1,3 +1,8 @@
+# Set prefix to Ctrl-Space
+unbind C-b
+set -g prefix C-Space
+bind Space send-prefix
+
 # Split panes using \ and -
 bind \ split-window -h
 bind - split-window -v
