--- a/config/.tmux.conf
+++ b/config/.tmux.conf
@@ -14,3 +14,8 @@ set -g mouse on
 
 # Use vi bindings
 set-window-option -g mode-keys vi
+
+# macOS: Enable copy / paste to system clipboard...
+# Make sure to `brew install reattach-to-user-namespace` first
+bind -T copy-mode-vi Enter send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+bind -T copy-mode-vi MouseDragEnd1Pane send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
